modify blog config

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -6,7 +6,7 @@ email: Jackson_zhang07@yeah.net
 description: ""
 keyword: ""
 url: "https://jacksoncode.github.io"              # your host, for absolute URL
-baseurl: "/blog"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "./"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
