--- a/wiki/config.json
+++ b/wiki/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Jackson WiKi",
+  "name": "WiKi",
   "ver": "V0.1",
-  "logo": "logo.jpg",
+  "logo": "logo.png",
   "testing": true
 }
