--- a/module/llm/ai_billing_config.ini
+++ b/module/llm/ai_billing_config.ini
@@ -10,7 +10,7 @@ enabled = true
 
 [doubao]
 api_key = 31219422-2f24-40d4-a8b6-5a2b19c39df6
-base_url = https://ark.cn-beijing.volces.com
+base_url = https://ark.cn-beijing.volces.com/api/v3
 enabled = true
 
 [huoshan]
@@ -20,7 +20,7 @@ enabled = false
 
 [zhipu]
 api_key = 8e12aed140fe43b88a96660f03053de4.FzEddkIBT4PE33Cs
-base_url = https://open.bigmodel.cn
+base_url = https://open.bigmodel.cn/api/paas/v4
 enabled = true
 
 [tencent_hunyuan]
