--- a/module/llm/ai_billing_config.ini
+++ b/module/llm/ai_billing_config.ini
@@ -1,15 +1,15 @@
 [deepseek]
-api_key = sk-4b1c68490b9b41ecbb534a8efb1af971
+api_key = 
 base_url = https://api.deepseek.com
 enabled = true
 
 [kimi]
-api_key = sk-PB1XX4pyKZBlMJXnputF0T6wxbavTAdNbPYvX5oZcuBmIjao
+api_key = 
 base_url = https://api.moonshot.cn
 enabled = true
 
 [doubao]
-api_key = 31219422-2f24-40d4-a8b6-5a2b19c39df6
+api_key = 
 base_url = https://ark.cn-beijing.volces.com/api/v3
 enabled = true
 
@@ -19,7 +19,7 @@ base_url =
 enabled = false
 
 [zhipu]
-api_key = 8e12aed140fe43b88a96660f03053de4.FzEddkIBT4PE33Cs
+api_key = 
 base_url = https://open.bigmodel.cn/api/paas/v4
 enabled = true
 
@@ -29,7 +29,7 @@ base_url =
 enabled = false
 
 [openai]
-api_key = sk-6O48HR8lE5tBuFCeabayCiicRxLQaINyGBqbIMOWbvAUtUTu
+api_key = 
 base_url = https://api.openai.com
 enabled = true
 
@@ -39,7 +39,7 @@ base_url =
 enabled = false
 
 [aliyun_bailian]
-api_key = sk-94fa6d2973704d2ebd981e6638539a4a
+api_key = 
 base_url = https://dashscope.aliyuncs.com
 enabled = true
 
@@ -109,7 +109,7 @@ max_retries = 3
 retry_delay = 1
 
 [siliconflow]
-api_key = sk-hcuccdahaugtfppfgwijypnpdtitjducnwvzypeocljmrnst
+api_key = 
 base_url = https://api.siliconflow.cn
 enabled = true
 
